1-ns/splunk/deployment/ingress-peluan.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splunkquiz-ingress-peluan
  namespace: splunkquiz
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: splunkquiz
spec:
  ingressClassName: public
  rules:
  - host: splunkquiz.peluan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: splunkquiz-service
            port:
              number: 80
  tls:
  - hosts:
    - splunkquiz.peluan.com
    secretName: peluan-wildcard-tls
